change with text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="big-box">
                 <img id="cover" src="./assets/images/album.jpg" alt="album cover">
         
+                <p id="band">Convolutionaries</p> 
                 <p id="city">Boston, MA</p>
             
                 <p id="desription">
@@ -37,6 +38,7 @@
             <p class="music-link" id="youtube">YouTube Music</p>
             <p class="music-link" id="spotify">Spotify</p>
 
+            <p> This page was created by Convolutionaries </p>
         </div>
 
     </div>
