--- a/index.html
+++ b/index.html
@@ -38,24 +38,25 @@
                 <div id="apple-logo" class="music-logo">
                     <img src="./assets/images/applelogo.jpg" id="logo1" title="apple logo">
                 </div>
-                <!-- <div class="music-div"> -->
-                    <p class="music-link" id="apple">Apple Music</p>
-                <!-- </div> -->
+                <p class="music-link" id="apple">Apple Music</p>
+                <div class="arrow">&#9654;</div>
             </div>
             <div class="music-box">
-                <div class="music-logo"></div>
-                <!-- <div class="music-div"> -->
+                <div class="music-logo" id="youtube-logo">
+                    <img src="./assets/images/youtubelogo.jpg" id="logo1" title="apple logo">
+                </div>
                     <p class="music-link" id="youtube">YouTube Music</p>
-                <!-- </div> -->
+                    <div class="arrow">&#9654;</div>
             </div>
             <div class="music-box">
-                <div class="music-logo"></div>
-                <!-- <div class="music-div"> -->
+                <div class="music-logo" id="spotify-logo">
+                    <img src="./assets/images/spotifylogo.jpg" id="logo1" title="apple logo">
+                </div>
                     <p class="music-link" id="spotify">Spotify</p>
-                <!-- </div> -->
+                    <div class="arrow">&#9654;</div>
             </div>
 
-            <p> This page was created by Convolutionaries </p>
+            <p style="margin-top: 50px"> &#9637; This page was created by Convolutionaries </p>
         </div>
 
     </div>
