--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                     Facebook</a>
             </div>
     
-            <div class="music-box">
+            <a href="https://music.apple.com/us/album/viva-la-convolution/1644041910" class="music-box">
                 <div id="apple-logo" class="music-logo">
                     <img src="./assets/images/applelogo.jpg" id="logo1" title="apple logo">
                 </div>
                 <p class="music-link" id="apple">Apple Music</p>
                 <div class="arrow">&#9654;</div>
-            </div>
+            </a>
             <div class="music-box">
                 <div class="music-logo" id="youtube-logo">
                     <img src="./assets/images/youtubelogo.jpg" id="logo1" title="apple logo">
