--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
+
     <title>Convolutionaries</title>
 
 </head>
@@ -29,9 +30,11 @@
                     electronic or orchestral twists. All songs recorded and mixed on 
                     an iPhone.
                 </p>
-            
-                <a id="link" class="page-box" href="https://www.facebook.com/profile.php?id=100084923860660">
-                    Facebook</a>
+
+                    <a href="https://www.facebook.com/profile.php?id=100084923860660">
+                        <img id="f-link" src="./assets/images/facebook.svg" alt="facebook link"/>
+                    </a>
+
             </div>
     
             <a href="https://music.apple.com/us/album/viva-la-convolution/1644041910" class="music-box">
@@ -41,20 +44,20 @@
                 <p class="music-link" id="apple">Apple Music</p>
                 <div class="arrow">&#9654;</div>
             </a>
-            <div class="music-box">
+            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kzZh_n-aa3SX1H9XP5NZrlWQjjZl3luds&feature=share" class="music-box">
                 <div class="music-logo" id="youtube-logo">
                     <img src="./assets/images/youtubelogo.jpg" id="logo1" title="apple logo">
                 </div>
                     <p class="music-link" id="youtube">YouTube Music</p>
                     <div class="arrow">&#9654;</div>
-            </div>
-            <div class="music-box">
+            </a>
+            <a href="https://prf.hn/click/camref:1101ljvYv/pubref:albumuuid%3D/destination:https://open.spotify.com/album/1tWvG0q4FI2zCqhhd1n38J?si=Tso9fKrOQLmVb4WKufxcDw" class="music-box">
                 <div class="music-logo" id="spotify-logo">
                     <img src="./assets/images/spotifylogo.jpg" id="logo1" title="apple logo">
                 </div>
                     <p class="music-link" id="spotify">Spotify</p>
                     <div class="arrow">&#9654;</div>
-            </div>
+            </a>
 
             <p style="margin-top: 50px"> &#9637; This page was created by Convolutionaries </p>
         </div>
