added music player

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="background-section">
+    <div class="background-section">-*
 
         <div class="main-section">
 
@@ -34,9 +34,26 @@
                     <a href="https://www.facebook.com/profile.php?id=100084923860660">
                         <img id="f-link" src="./assets/images/facebook.svg" alt="facebook link"/>
                     </a>
-
             </div>
     
+            <!-- <iframe id="play-music" 
+                allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" 
+                frameborder="0" height="450" 
+                style="width:100%;max-width:660px;overflow:hidden;background:transparent;" 
+                sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" 
+                src="https://embed.music.apple.com/us/album/3rd-secret/1618651092">
+            </iframe> -->
+
+            <iframe 
+                id="play-music"
+                style="border-radius:12px" 
+                src="https://open.spotify.com/embed/artist/4atj4MLAMFKMwu4PG1zzb7?utm_source=generator&theme=0" 
+                width="620px" 
+                height="380" frameBorder="0" allowfullscreen="" 
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                loading="lazy">
+            </iframe>
+
             <a href="https://music.apple.com/us/album/viva-la-convolution/1644041910" class="music-box">
                 <div id="apple-logo" class="music-logo">
                     <img src="./assets/images/applelogo.jpg" id="logo1" title="apple logo">
