fixed erroneous code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="background-section">-*
+    <div class="background-section">
 
         <div class="main-section">
 
